--- a/src/app/Pages/login/login.page.scss
+++ b/src/app/Pages/login/login.page.scss
@@ -27,3 +27,21 @@ body {
     margin-top: 15%;
     margin-left: 35%;
 }
+
+.imagen-header {
+    width: 16%;
+    margin-left: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.texto {
+    color: rgb(169, 175, 76);
+    margin-left: 60px;
+}
+
+
+.contenedor-header{
+    background-color: rgb(28, 60, 90);
+    display: flex;
+}
