--- a/src/app/Pages/restablecer/restablecer.page.html
+++ b/src/app/Pages/restablecer/restablecer.page.html
@@ -1,8 +1,11 @@
 <ion-header>
-  <app-header></app-header>
+  <div class="contenedor-header">
+    <img src="../../../assets/img/Auto.png" alt="" srcset="" class="imagen-header">
+    <h1 class="texto">Recuperar</h1>
+  </div>
 </ion-header>
-
 <ion-content [fullscreen]="true">
+
   <body>
     <div class="contenedor-imagen">
       <img src="../../../assets/img/Usuario.png" alt="" srcset="" class="imagen">
@@ -12,7 +15,7 @@
       <mat-label >Ingrese Usuario</mat-label>
       <input matInput>
     </mat-form-field> 
-
+  <br>
     <div class="boton">
       <button mat-flat-button>Recuperar</button>
     </div>
