--- a/src/app/Pages/restablecer/restablecer.page.scss
+++ b/src/app/Pages/restablecer/restablecer.page.scss
@@ -3,17 +3,17 @@ body {
 }
 
 .imagen{
-    width: 60%;
+    width: 30%;
     margin-top: 40%;
 }
 
 .contenedor-imagen {
-    margin-left: 30%;
+    margin-left: 40%;
 }
 
 
 .formulario{
-    margin-left: 23%;
+    margin-left: 27%;
     margin-top: 5%;
 }
 
@@ -26,4 +26,22 @@ body {
 .boton{
     margin-top: 15%;
     margin-left: 35%;
+}
+
+.imagen-header {
+    width: 16%;
+    margin-left: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.texto {
+    color: rgb(169, 175, 76);
+    margin-left: 60px;
+}
+
+
+.contenedor-header{
+    background-color: rgb(28, 60, 90);
+    display: flex;
 }
