--- a/src/app/Pages/intro/intro.page.html
+++ b/src/app/Pages/intro/intro.page.html
@@ -5,7 +5,10 @@
     </div>
     <div class="contenedor-img">
       <img src="../../../assets/img/Auto.png" alt="" srcset="" style="width: 50%px;">
-      <H1 class="texto">TeLlevoAPP</H1>
+      <H1 class="texto">TeLlevoAPP</H1>      
+    </div>
+    <div class="barra">
+      <ion-progress-bar [value]="progress"></ion-progress-bar>
     </div>
   </body>
 </ion-content>
