--- a/src/app/Pages/home/home.page.html
+++ b/src/app/Pages/home/home.page.html
@@ -13,6 +13,20 @@
     </div>
      
     <div class="footer">
+      <span>
+        <div style="columns: 3;">
+          <img class="img-programar" src="../../../assets/img/Programar_Viaje.png" alt="" srcset="" (click)="Programar()">
+          <h1 class="Programar-viaje">Programar Viaje</h1>
+
+          <img class="img-viaje" src="../../../assets/img/Viaje_disponibles.png" alt="" srcset="" (click)="Viaje()">
+            <h1 class="viaje-disponible">Viaje disponible</h1>
+
+            <img class="usuario" src="../../../assets/img/Usuario.png" alt="" srcset="" (click)="Perfil()">
+            <h1 class="perfil">Perfil</h1>
+        </div>
+      </span>
+
+
     </div>
   </body>
 </ion-content>
