--- a/src/app/Pages/home/home.page.scss
+++ b/src/app/Pages/home/home.page.scss
@@ -50,3 +50,38 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.Programar-viaje {
+  color: rgb(169, 175, 76);
+  font-size: 20px;
+  margin-bottom: 10%;
+}
+
+.img-programar {
+  margin-left: 8%;
+  margin-top: 5%;
+  width: 40%;
+}
+
+.img-viaje {
+  margin-left: 8%;
+  margin-top: 5%;
+  width: 40%;
+}
+.usuario {
+  margin-left: 8%;
+  margin-top: 5%;
+  width: 40%;
+}
+
+.perfil {
+  color: rgb(169, 175, 76);
+  font-size: 20px;
+  margin-bottom: 10%;
+}
+
+.viaje-disponible {
+  color: rgb(169, 175, 76);
+  font-size: 20px;
+  margin-bottom: 10%;
+}
