--- a/src/app/Pages/home/home.page.html
+++ b/src/app/Pages/home/home.page.html
@@ -5,28 +5,30 @@
   </div>
 </ion-header>
 <ion-content [fullscreen]="true">
-
-  <body>
-  
     <div class="contenedor-mapa">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2637.67150491447!2d-70.5783433224395!3d-33.598618317789125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662d7037854df81%3A0x893f58a1479b8f82!2sDuoc%20UC%3A%20Sede%20Puente%20Alto!5e0!3m2!1ses-419!2scl!4v1725929956310!5m2!1ses-419!2scl" width="600" height="700" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-     
-    <div class="footer">
-      <span>
-        <div style="columns: 3;">
-          <img class="img-programar" src="../../../assets/img/Programar_Viaje.png" alt="" srcset="" (click)="Programar()">
-          <h1 class="Programar-viaje">Programar Viaje</h1>
 
-          <img class="img-viaje" src="../../../assets/img/Viaje_disponibles.png" alt="" srcset="" (click)="Viaje()">
-            <h1 class="viaje-disponible">Viaje disponible</h1>
-
-            <img class="usuario" src="../../../assets/img/Usuario.png" alt="" srcset="" (click)="Perfil()">
-            <h1 class="perfil">Perfil</h1>
-        </div>
-      </span>
-
-
-    </div>
-  </body>
+    <ion-tabs>
+      <ion-tab-bar slot="bottom">
+        <ion-tab-button (click)="Programar()">
+          <div>
+            <img src="../../../assets/img/Programar_Viaje.png" alt="" srcset="" class="img-programar">
+          </div>
+          Programar viaje
+        </ion-tab-button>
+        <ion-tab-button (click)="Viajes()">
+          <div>
+            <img src="../../../assets/img/Viaje_disponibles.png" alt="" srcset="" class="img-viaje">
+          </div>
+          Viajes disponibles
+        </ion-tab-button>
+        <ion-tab-button (click)="Perfil()">
+          <div>
+            <img src="../../../assets/img/Usuario.png" alt="" srcset="" class="img-perfil">
+          </div>
+          Perfil
+        </ion-tab-button>
+      </ion-tab-bar>
+    </ion-tabs>
 </ion-content>
