--- a/src/app/Pages/home/home.page.scss
+++ b/src/app/Pages/home/home.page.scss
@@ -1,33 +1,3 @@
-body {
-  background-color: white;
-}
-
-.imagen{
-  width: 30%;
-  margin-top: 40%;
-}
-
-.contenedor-imagen {
-  margin-left: 40%;
-}
-
-
-.formulario{
-  margin-left: 27%;
-  margin-top: 5%;
-}
-
-.restablecer{
-  margin-left: 35%;
-  padding: 0%;
-  text-decoration: none;
-}
-
-.boton{
-  margin-top: 15%;
-  margin-left: 35%;
-}
-
 .imagen-header {
   width: 16%;
   margin-left: 5px;
@@ -45,43 +15,17 @@ body {
   background-color: rgb(28, 60, 90);
   display: flex;
 }
-.footer {
-  background-color: rgb(28, 60, 90);
-  width: 100%;
-  height: 100%;
+
+.img-programar{
+  width: 20%;
 }
 
-.Programar-viaje {
-  color: rgb(169, 175, 76);
-  font-size: 20px;
-  margin-bottom: 10%;
+.img-viaje{
+  width: 20%;
 }
 
-.img-programar {
-  margin-left: 8%;
-  margin-top: 5%;
-  width: 40%;
+.img-perfil{
+  width: 20%;
 }
 
-.img-viaje {
-  margin-left: 8%;
-  margin-top: 5%;
-  width: 40%;
-}
-.usuario {
-  margin-left: 8%;
-  margin-top: 5%;
-  width: 40%;
-}
 
-.perfil {
-  color: rgb(169, 175, 76);
-  font-size: 20px;
-  margin-bottom: 10%;
-}
-
-.viaje-disponible {
-  color: rgb(169, 175, 76);
-  font-size: 20px;
-  margin-bottom: 10%;
-}
