--- a/src/app/Pages/perfil/perfil.page.scss
+++ b/src/app/Pages/perfil/perfil.page.scss
@@ -83,6 +83,8 @@ body {
     color: rgb(28, 60, 90);
     margin-top: 20%;
 }
-.btn-cerrar{
-    margin-left: 60%;
+#present-alert{
+    position: fixed;
+    right: 0%;
+    top: 0%;
 }
