--- a/src/app/Pages/programar/programar.page.html
+++ b/src/app/Pages/programar/programar.page.html
@@ -11,21 +11,24 @@
     <ion-list>
       <ion-list class="lista">  
         <ion-item>
-          <ion-input label="Costo por persona" type="number" placeholder="000" [(ngModel)]="costo_persona"></ion-input>
+          <ion-input label="Costo por persona" type="number" placeholder="000" [(ngModel)]="nuevo_viaje.costo_persona"></ion-input>
         </ion-item>
         <ion-item>
-          <ion-input label="Destino" placeholder="Ingresar destino" [(ngModel)]="destino"></ion-input>
+          <ion-input label="Asientos disponibles" type="number" placeholder="0" [(ngModel)]="nuevo_viaje.disponibles"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-input label="Destino" placeholder="Ingresar destino" [(ngModel)]="nuevo_viaje.destino"></ion-input>
         </ion-item>
     
         <mat-form-field class="example-full-width" class="lugar-encuentro">
           <mat-label>Lugar de encuentro</mat-label>
-          <textarea matInput [(ngModel)]="lugar_encuentro"></textarea>
+          <textarea matInput [(ngModel)]="nuevo_viaje.encuentro"></textarea>
         </mat-form-field>
     
       </ion-list>
     </ion-list>
 
-    <ion-button class="btn-programar" (click)="Programar()" id="btn-programar">Programar</ion-button>
+    <ion-button class="btn-programar" (click)="Grabar()" id="btn-programar">Programar</ion-button>
 
 
   </body>
