--- a/src/app/Pages/home/home.page.html
+++ b/src/app/Pages/home/home.page.html
@@ -5,9 +5,17 @@
   </div>
 </ion-header>
 <ion-content [fullscreen]="true">
-    <div class="contenedor-mapa">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2637.67150491447!2d-70.5783433224395!3d-33.598618317789125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662d7037854df81%3A0x893f58a1479b8f82!2sDuoc%20UC%3A%20Sede%20Puente%20Alto!5e0!3m2!1ses-419!2scl!4v1725929956310!5m2!1ses-419!2scl" width="600" height="700" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Home</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  
+  <ion-content id="mapa">
+    <app-mapa [lat]="-33.598272925829164" [lng]="-70.57885144723004"></app-mapa> <!-- Coordenadas de ejemplo -->
+  </ion-content>
+  
+  
 
     <ion-tabs>
       <ion-tab-bar slot="bottom">
