--- a/src/app/Components/mapa/mapa.component.html
+++ b/src/app/Components/mapa/mapa.component.html
@@ -1,1 +1,2 @@
-<div id="mapa"  style="width: 100%; height: 100%; margin: 0; padding: 0;"></div>
+<div id="map" style="width: 100%; height: 400px; display: none;"></div>
+
