--- a/src/app/Pages/p404/p404.page.scss
+++ b/src/app/Pages/p404/p404.page.scss
@@ -9,3 +9,9 @@ body {
 .contenedor-imagen{
     margin-top: 50%;
 }
+
+.boton{
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
