--- a/src/app/Components/mapa/mapa.component.scss
+++ b/src/app/Components/mapa/mapa.component.scss
@@ -2,3 +2,14 @@
     width: 100%;
     height: 100vh; // Altura total de la ventana
   }
+
+  .search-form {
+    position: absolute; /* Asegúrate de que esté en posición absoluta */
+    top: 10px; /* Ajusta la posición según sea necesario */
+    left: 10px; /* Ajusta la posición según sea necesario */
+    background: white; /* Asegúrate de que tenga un fondo visible */
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); /* Añadir sombra para visibilidad */
+    z-index: 10; /* Asegúrate de que esté por encima del mapa */
+  }
