--- a/src/app/Pages/home/home.page.html
+++ b/src/app/Pages/home/home.page.html
@@ -22,7 +22,7 @@
   </div>
     
   <div class="contenedor-his">
-    <ion-button class="btm-historial">
+    <ion-button class="btm-historial" (click)="Perfil()">
       <ion-icon name="time-outline"></ion-icon>
       Historial
     </ion-button>
