--- a/src/app/Pages/p404/p404.page.html
+++ b/src/app/Pages/p404/p404.page.html
@@ -8,6 +8,12 @@
   <body>
     <div class="contenedor-imagen">
       <img src="../../../assets/img/404.png" alt="">
+
+      <div>
+        <a href="home">
+            <ion-button>HOME</ion-button>
+        </a>
+    </div>
     </div>
   </body>
 </ion-content>
