--- a/src/app/Pages/programar/programar.page.html
+++ b/src/app/Pages/programar/programar.page.html
@@ -1,6 +1,8 @@
 <ion-header>
   <div class="contenedor-header">
-    <img src="../../../assets/img/Auto.png" alt="" srcset="" class="imagen-header">
+    <a routerLink="/home" class="imagen-header">
+      <img src="../../../assets/img/Auto.png" alt="" class="">
+    </a>
     <h1 class="texto">Programar Viaje</h1>
   </div>
 </ion-header>
@@ -34,5 +36,5 @@
 
 
   </body>
-  <app-mapa (destinoSeleccionado)="onDestinoSeleccionado($event)"></app-mapa>
+  <app-mapa (Viaje)="onDestinoSeleccionado($event)"></app-mapa>
 </ion-content>
