--- a/src/app/Pages/viaje/viaje.page.html
+++ b/src/app/Pages/viaje/viaje.page.html
@@ -1,30 +1,28 @@
 <ion-header>
   <div class="contenedor-header">
-    <img src="../../../assets/img/Auto.png" alt="" srcset="" class="imagen-header">
+    <a routerLink="/home" class="imagen-header">
+      <img src="../../../assets/img/Auto.png" alt="" class="">
+    </a>
     <h1 class="texto">Viaje disponible</h1>
   </div>
 </ion-header>
 <ion-content [fullscreen]="true">
-
-  <body>
-
-    <h1 class="texto-usuario">{{usuario}}</h1>
-    <!-- <h1 *ngIf="arreglo == undefined" class="txt-viaje">No hay viajes disponibles</h1> -->
-    <div *ngFor="let viaje of listado_viaje">
-      <ion-card>
-        <ion-card-header>
-          <ion-card-title>{{viaje.destino}}</ion-card-title>
-          <ion-card-subtitle>Costo por persona: ${{viaje.costo_persona}}</ion-card-subtitle>
-          <ion-card-subtitle>Asientos disponibles: {{viaje.disponibles}}</ion-card-subtitle>
-        </ion-card-header>
-      
-        <ion-card-content>
-          Lugar de encuentro: {{viaje.encuentro}}
-        </ion-card-content>
-      </ion-card>
-      <ion-button class="boton-viaje" (click)="confirmarModificar(viaje)">Tomar viaje</ion-button>
-    </div>
-
-
-  </body>
+  <h1 class="texto-usuario">{{usuario}}</h1>
+  <!-- <h1 *ngIf="arreglo == undefined" class="txt-viaje">No hay viajes disponibles</h1> -->
+  <div *ngFor="let viaje of listado_viaje">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>{{viaje.destino}}</ion-card-title>
+        <ion-card-subtitle>Costo por persona: ${{viaje.costo_persona}}</ion-card-subtitle>
+        <ion-card-subtitle>Asientos disponibles: {{viaje.disponibles}}</ion-card-subtitle>
+      </ion-card-header>
+    
+      <ion-card-content>
+        Lugar de encuentro: {{viaje.encuentro}}
+      </ion-card-content>
+    </ion-card>
+    <ion-button class="boton-viaje" (click)="confirmarModificar(viaje)">Tomar viaje</ion-button>
+    <ion-button class="boton-viaje" (click)="verViaje(viaje)">Ver viaje</ion-button>
+  </div>
+  <app-mapa #mapComponent></app-mapa>
 </ion-content>
