--- a/src/app/Pages/login/login.page.scss
+++ b/src/app/Pages/login/login.page.scss
@@ -45,3 +45,9 @@ body {
     background-color: rgb(28, 60, 90);
     display: flex;
 }
+
+.restablecer{
+    justify-items: right;
+    width: 56%;
+    color: rgb(0, 0, 255);
+}
