--- a/src/app/Pages/viaje/viaje.page.html
+++ b/src/app/Pages/viaje/viaje.page.html
@@ -7,7 +7,6 @@
   </div>
 </ion-header>
 <ion-content [fullscreen]="true">
-  <h1 class="texto-usuario">{{usuario}}</h1>
   <!-- <h1 *ngIf="arreglo == undefined" class="txt-viaje">No hay viajes disponibles</h1> -->
   <div *ngFor="let viaje of listado_viaje">
     <ion-card>
@@ -15,6 +14,7 @@
         <ion-card-title>{{viaje.destino}}</ion-card-title>
         <ion-card-subtitle>Costo por persona: ${{viaje.costo_persona}}</ion-card-subtitle>
         <ion-card-subtitle>Asientos disponibles: {{viaje.disponibles}}</ion-card-subtitle>
+        <ion-card-subtitle>Conductor: {{viaje.usuario}}</ion-card-subtitle>
       </ion-card-header>
     
       <ion-card-content>
