--- a/src/app/Components/mapa/mapa.component.html
+++ b/src/app/Components/mapa/mapa.component.html
@@ -7,4 +7,5 @@
     </ul>
   </div>
 <div id="map" style="width: 100%; height: 400px; display: none;"></div>
+<ion-button *ngIf="showBtn" (click)="closeMap()">Cerrar</ion-button>
 
