--- a/src/app/Pages/perfil/perfil.page.html
+++ b/src/app/Pages/perfil/perfil.page.html
@@ -16,43 +16,22 @@
     </div>
     <h1 class="texto-historial">Historial</h1>
 
-    <ion-card>
-      <ion-card-header>
-        <ion-card-title>Fecha: dd/mm/yyyy hh:mm</ion-card-title>
-        <ion-card-subtitle>Nombre del viaje</ion-card-subtitle>
-      </ion-card-header>
-      <ion-card-content>
-        <ion-list>
-          <ion-item>
-            <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
-            </ion-thumbnail>
-            <ion-label>Manuel</ion-label>
-          </ion-item>
-    
-          <ion-item>
-            <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
-            </ion-thumbnail>
-            <ion-label>Roberto</ion-label>
-          </ion-item>
-    
-          <ion-item>
-            <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
-            </ion-thumbnail>
-            <ion-label>Jose</ion-label>
-          </ion-item>
-    
-          <ion-item lines="none">
-            <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
-            </ion-thumbnail>
-            <ion-label>Luis</ion-label>
-          </ion-item>
-        </ion-list>
-      </ion-card-content>
-    </ion-card>
+    <div *ngFor="let viaje of listado_viaje">
+      <div *ngIf="uid === viaje.uid">
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>{{viaje.destino}}</ion-card-title>
+            <ion-card-subtitle>Costo por persona: ${{viaje.costo_persona}}</ion-card-subtitle>
+            <ion-card-subtitle>Asientos disponibles: {{viaje.disponibles}}</ion-card-subtitle>
+            <ion-card-subtitle>Conductor: {{viaje.usuario}}</ion-card-subtitle>
+          </ion-card-header>
+        
+          <ion-card-content>
+            Lugar de encuentro: {{viaje.encuentro}}
+          </ion-card-content>
+        </ion-card>
+      </div>
+    </div>
     
     
     
