--- a/src/app/Pages/restablecer/restablecer.page.scss
+++ b/src/app/Pages/restablecer/restablecer.page.scss
@@ -1,33 +1,3 @@
-body {
-    background-color: white;
-}
-
-.imagen{
-    width: 30%;
-    margin-top: 40%;
-}
-
-.contenedor-imagen {
-    margin-left: 40%;
-}
-
-
-.formulario{
-    margin-left: 27%;
-    margin-top: 5%;
-}
-
-.restablecer{
-    margin-left: 35%;
-    padding: 0%;
-    text-decoration: none;
-}
-
-.boton{
-    margin-top: 15%;
-    margin-left: 35%;
-}
-
 .imagen-header {
     width: 16%;
     margin-left: 5px;
@@ -45,3 +15,79 @@ body {
     background-color: rgb(28, 60, 90);
     display: flex;
 }
+
+/* From Uiverse.io by kennyotsu */ 
+.container {
+    width: 100%;
+    height: 100%;
+    /* Add your background pattern here */
+    background-color: #313131;
+    background-image: radial-gradient(rgba(255, 255, 255, 0.171) 2px, transparent 0);
+    background-size: 30px 30px;
+    background-position: -5px -5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+/* From Uiverse.io by satyamchaudharydev */ 
+.card {
+    width: 240px;
+    height: 254px;
+    padding: 0 15px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 12px;
+    background: #fff;
+    border-radius: 20px;
+  }
+  
+  .card > * {
+    margin: 0;
+  }
+  
+  .card__title {
+    font-size: 23px;
+    font-weight: 900;
+    color: #333;
+  }
+  
+  .card__content {
+    font-size: 13px;
+    line-height: 18px;
+    color: #333;
+  }
+  
+  .card__form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  
+  .card__form input {
+    margin-top: 10px;
+    outline: 0;
+    background: rgb(255, 255, 255);
+    box-shadow: transparent 0px 0px 0px 1px inset;
+    padding: 0.6em;
+    border-radius: 14px;
+    border: 1px solid #333;
+    color: black;
+  }
+  
+  .card__form button {
+    border: 0;
+    background: #111;
+    color: #fff;
+    padding: 0.68em;
+    border-radius: 14px;
+    font-weight: bold;
+  }
+  
+  .sign-up:hover {
+    opacity: 0.8;
+  } 
+  
