--- a/src/app/Pages/intro/intro.page.html
+++ b/src/app/Pages/intro/intro.page.html
@@ -7,8 +7,6 @@
       <img src="../../../assets/img/Auto.png" alt="" srcset="" style="width: 50%px;">
       <H1 class="texto">TeLlevoAPP</H1>      
     </div>
-    <div class="barra">
-      <ion-progress-bar [value]="progress"></ion-progress-bar>
-    </div>
+    <ion-button (click)="seguir()">Ok</ion-button>
   </body>
 </ion-content>
