--- a/src/app/Pages/login/login.page.html
+++ b/src/app/Pages/login/login.page.html
@@ -23,9 +23,14 @@
       </div>
     
     <div class="flex-row">
-      <div>
-      <input type="radio">
-      <label>Recordar </label>
+      <div class="checkbox-wrapper-46">
+        <input type="checkbox" id="cbx-46" class="inp-cbx" [(ngModel)]="recordar"/>
+        <label for="cbx-46" class="cbx"
+          ><span>
+            <svg viewBox="0 0 12 10" height="10px" width="12px">
+              <polyline points="1.5 6 4.5 9 10.5 1"></polyline></svg></span
+          ><span>Recordar</span>
+        </label>
       </div>
       <span class="span" (click)="restablecer()">Olvidaste la contraseña?</span>
     </div>
