--- a/src/app/Pages/perfil/perfil.page.html
+++ b/src/app/Pages/perfil/perfil.page.html
@@ -1,6 +1,8 @@
 <ion-header>
   <div class="contenedor-header">
-    <img src="../../../assets/img/Auto.png" alt="" srcset="" class="imagen-header">
+    <a routerLink="/home" class="imagen-header">
+      <img src="../../../assets/img/Auto.png" alt="" class="">
+    </a>
     <h1 class="texto">Perfil</h1>
     <ion-button id="present-alert">Cerrar sesión</ion-button>
   </div>
