--- a/src/app/Pages/home/home.page.html
+++ b/src/app/Pages/home/home.page.html
@@ -28,7 +28,7 @@
           Historial
         </ion-button>
     
-        <ion-button class="btn-noti">
+        <ion-button class="btn-noti" routerLink="/notificacion">
           <ion-icon name="notifications-outline"></ion-icon>
           Notificaciones
         </ion-button>
