--- a/src/app/Pages/viaje/viaje.page.html
+++ b/src/app/Pages/viaje/viaje.page.html
@@ -24,5 +24,5 @@
     <ion-button class="boton-viaje" (click)="confirmarModificar(viaje)">Tomar viaje</ion-button>
     <ion-button class="boton-viaje" (click)="verViaje(viaje)">Ver viaje</ion-button>
   </div>
-  <app-mapa #mapComponent></app-mapa>
+  <app-map></app-map>
 </ion-content>
