--- a/src/app/Components/confirm-modal/confirm-modal.component.html
+++ b/src/app/Components/confirm-modal/confirm-modal.component.html
@@ -10,7 +10,7 @@
 <ion-content>
   <div class="ion-padding">
     <p>¿Está seguro de que desea establecer <strong>{{ destino }}</strong> como su destino?</p>
-    <ion-button expand="full" (click)="confirmar()">Confirmar</ion-button>
+    <ion-button expand="full" (click)="confirmar()" name="confirmar">Confirmar</ion-button>
     <ion-button expand="full" color="light" (click)="cancelar()">Cancelar</ion-button>
   </div>
 </ion-content>
