--- a/src/app/Components/mapa/mapa.component.html
+++ b/src/app/Components/mapa/mapa.component.html
@@ -6,6 +6,6 @@
       </li>
     </ul>
   </div>
-<div id="map" style="width: 100%; height: 400px; display: none;"></div>
-<ion-button *ngIf="showBtn" (click)="closeMap()">Cerrar</ion-button>
+<div id="map" style="width: 100%; height: 400px; display: none;" name="mapa"></div>
+<ion-button *ngIf="showBtn" (click)="closeMap()" name="btn">Cerrar</ion-button>
 
