--- a/src/app/Pages/home/home.page.html
+++ b/src/app/Pages/home/home.page.html
@@ -23,7 +23,7 @@
       </div>
         
       <div class="contenedor-his">
-        <ion-button class="btm-historial" (click)="Perfil()">
+        <ion-button class="btm-historial" (click)="Perfil()" name="historial">
           <ion-icon name="time-outline"></ion-icon>
           Historial
         </ion-button>
