--- a/src/app/Pages/login/login.page.html
+++ b/src/app/Pages/login/login.page.html
@@ -34,7 +34,7 @@
       </div>
       <span class="span" (click)="restablecer()">Olvidaste la contraseña?</span>
     </div>
-    <button class="button-submit" (click)="login()">Iniciar sesión</button>
+    <button class="button-submit" (click)="login()" name="ok">Iniciar sesión</button>
     <p class="p">No tienes cuenta? <span class="span" (click)="registrar()">Registrarse</span>
 
     </p><p class="p line">Inciciar sesión con</p>
