--- a/src/app/Pages/perfil/perfil.page.html
+++ b/src/app/Pages/perfil/perfil.page.html
@@ -4,7 +4,7 @@
       <img src="../../../assets/img/Auto.png" alt="" class="">
     </a>
     <h1 class="texto">Perfil</h1>
-    <ion-button id="present-alert">Cerrar sesión</ion-button>
+    <ion-button id="present-alert" name="cerrar">Cerrar sesión</ion-button>
   </div>
   
 </ion-header>
