--- a/src/app/Pages/programar/programar.page.html
+++ b/src/app/Pages/programar/programar.page.html
@@ -13,26 +13,26 @@
     
       <ion-list class="lista">          
         <ion-item>
-          <ion-input label="Costo por persona" type="number" placeholder="000" [(ngModel)]="nuevo_viaje.costo_persona"></ion-input>
+          <ion-input label="Costo por persona" type="number" placeholder="000" [(ngModel)]="nuevo_viaje.costo_persona" name="costo"></ion-input>
         </ion-item>
         <ion-item>
-          <ion-input label="Asientos disponibles" type="number" placeholder="0" [(ngModel)]="nuevo_viaje.disponibles"></ion-input>
+          <ion-input label="Asientos disponibles" type="number" placeholder="0" [(ngModel)]="nuevo_viaje.disponibles" name="asiento"></ion-input>
         </ion-item>
         <ion-item>
           <ion-input [disabled]="true" label="Destino" placeholder="Ingresar destino" [(ngModel)]="nuevo_viaje.destino"></ion-input>
-          <ion-button slot="end" (click)="abrirMapa()">Seleccionar</ion-button>
+          <ion-button slot="end" (click)="abrirMapa()" name="select">Seleccionar</ion-button>
           
 
         </ion-item>
     
         <mat-form-field class="example-full-width" class="lugar-encuentro">
           <mat-label>Lugar de encuentro</mat-label>
-          <textarea matInput [(ngModel)]="nuevo_viaje.encuentro"></textarea>
+          <textarea matInput [(ngModel)]="nuevo_viaje.encuentro" name="encuentro"></textarea>
         </mat-form-field>
     
       </ion-list>
 
-    <ion-button class="btn-programar" (click)="Grabar()" id="btn-programar">Programar</ion-button>
+    <ion-button class="btn-programar" (click)="Grabar()" id="btn-programar" name="ok">Programar</ion-button>
 
 
   </body>
