--- a/src/app/Pages/restablecer/restablecer.page.html
+++ b/src/app/Pages/restablecer/restablecer.page.html
@@ -11,8 +11,8 @@
     <p class="card__content">Si el correo existe se le enviara un correo de recuperacion.
     </p>
     <div class="card__form">
-        <input placeholder="Ingrese correo" type="email" [(ngModel)]="email">
-        <button class="sign-up" (click)="recuperar()" id="present-alert">Recuperar</button>
+        <input placeholder="Ingrese correo" type="email" [(ngModel)]="email" name="email">
+        <button class="sign-up" (click)="recuperar()" id="present-alert" name="ok">Recuperar</button>
     </div>
 </div>
 </div>
